--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@
 }
 
 body {
+    min-height: 80vh;
     height: 80vh;
     background-color: var(--backgroundColor);
     color: #ffffff80;
@@ -15,8 +16,8 @@ body {
 }
 
 #placeholder {
-    margin: 0 auto;
-    height: 70vh;
+    margin: 100px auto;
+    /* height: 60vh; */
     width: 60vw;
     display: flex;
     flex-direction: column;
@@ -25,14 +26,14 @@ body {
 }
 
 #timeHeader {
-    font-size: 1.6rem;
+    font-size: 1.4rem;
     text-align: center;
     color: white;
 }
 
 #parag {
     text-align: center;
-    font-size: 2rem;
+    font-size: 1.4rem;
     word-spacing: 0.2rem;
     /* letter-spacing: 0.1rem; */
 }
