--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 :root {
     --mainColor: #00FFFF;
     --secondaryColor: #9900FF;
-    --backgroundColor: rgb(18, 18, 18);
+    --backgroundColor: #121212;
     --successColor:#00CC66;
     --errorColor:#FF6666;
 }
