--- a/style.css
+++ b/style.css
@@ -16,9 +16,9 @@ body {
 }
 
 #placeholder {
-    margin: 80px auto;
+    margin: 15vh auto;
     /* height: 60vh; */
-    width: 60vw;
+    width: 40vw;
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -33,8 +33,10 @@ body {
 
 #parag {
     text-align: center;
-    font-size: 1.4rem;
+    width: 40vw;
+    font-size: 1.5rem;
     word-spacing: 0.2rem;
+    font-weight: bolder;
     /* letter-spacing: 0.1rem; */
 }
 
