--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 }
 
 #timeHeader {
-    font-size: 1.2rem;
+    font-size: 1rem;
     text-align: center;
     color: white;
 }
@@ -34,9 +34,10 @@ body {
 #parag {
     text-align: center;
     width: 40vw;
-    font-size: 1.5rem;
+    font-size: 1.2rem;
     word-spacing: 0.2rem;
-    font-weight: bolder;
+    font-weight: 500;
+    /* background-color: rgba(255, 255, 255, 0.010); */
     /* letter-spacing: 0.1rem; */
 }
 
@@ -44,20 +45,21 @@ body {
     color: white;
 }
 
+.letters {
+    background-color: rgba(255, 255, 255, 0.010);
+}
+
 .correct {
     color: var(--successColor);
     text-decoration: underline;
     text-decoration-color: var(--successColor);
-    /* text-decoration-thickness: 0.2rem;
-    text-underline-offset: 0.5rem; */
+    background-color: rgba(255, 255, 255, 0.030);
 }
 
 .wrong {
     color: var(--errorColor);
     text-decoration: underline;
     text-decoration-color: var(--errorColor);
-    /* text-decoration-thickness: 0.2rem;
-    text-underline-offset: 0.5rem; */
     background-color: #ff66664f;
 }
 
