--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 #parag {
     text-align: center;
-    width: 40vw;
+    width: 33vw;
     font-size: 1.2rem;
     word-spacing: 0.2rem;
     font-weight: 500;
@@ -190,11 +190,11 @@ body {
 
 @media only screen and (max-width: 1000px) {
     #parag {
-        font-size: 1.4rem;
+        font-size: 1rem;
+        width: 100%;
     }
     #keyboardSvg {
-        margin-top: 10px;
-        width: 80vw;
-        height: 45vh;
+        margin-top: -80px;
+        width: 60vw;
     }
 }
