--- a/style.css
+++ b/style.css
@@ -111,8 +111,8 @@ body {
 
 #keyboardSvg {
     margin-top: 30px;
-    width: 35vw;
-    height: 30vh;
+    width: 80vw;
+    height: 32vh;
 }
 
 @keyframes leftPlanets {
@@ -173,11 +173,16 @@ body {
 
 @media only screen and (max-width: 1000px) {
     #parag {
-        font-size: 1rem;
-        width: 100%;
+        font-size: 0.9rem;
+        width: 70vw;
     }
     #keyboardSvg {
         margin-top: -80px;
-        width: 60vw;
+        width: 80vw;
+        height: 50vh;
+    }
+    #errorSvg {
+        width: 90vw;
+        height: 60vh;
     }
 }
