--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     --mainColor: #00FFFF;
     --secondaryColor: #9900FF;
     --backgroundColor: #222831;
-    --successColor:#00C6B9;
+    --successColor:#23AFB2;
     --errorColor:#FF6E6A;
 }
 
