added to the database

--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ body {
     font-style: normal;
 }
 
+#selectionDiv {
+    display: none;
+}
+
 #placeholder {
     margin: 10vh auto;
     /* height: 60vh; */
