--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
 
 
 #categoryElementContainer {
+    margin-top: 40px;
     display: flex;
     justify-content: space-evenly;
     list-style: none;
@@ -42,9 +43,13 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 10%;
-    width: 20%;
+    width: 25%;
     height: 80px;
     transition: 0.3s ease-in-out;
+}
+
+.categoryElement img {
+    margin-top: 20px;
 }
 
 .categoryElement:hover {
@@ -70,13 +75,14 @@ body {
 
 #parag {
     text-align: center;
-    width: 66vw;
+    width: 65%;
     font-size: 1.3rem;
     word-spacing: 0.1rem;
     letter-spacing: 0.1rem;
     line-height: 35px;
     font-weight: 00;
-    background-color: rgba(255, 255, 255, 0.010);
+    /* background-color: rgba(255, 255, 255, 0.010);
+    border-radius: 2%; */
     letter-spacing: 0.1rem;
 }
 
