--- a/style.css
+++ b/style.css
@@ -17,6 +17,7 @@ body {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    overflow-y: hidden;
 }
 
 #categoryHeader {
@@ -25,7 +26,7 @@ body {
 }
 
 #categoryContainer {
-    width: 25vw;
+    width: 20vw;
     margin: 50px auto;
 }
 
@@ -59,7 +60,7 @@ body {
 #placeholder {
     margin: 10vh auto;
     /* height: 60vh; */
-    width: 100vw;
+    /* width: 100vw; */
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
